# rag-blog

./: .dockerignore  .gitignore  AGENTS.md  DAY1_NOTES.md  DAY2_NOTES.md  Dockerfile  MISSION.md  NOTES.md  README.md  RESOURCES.md  agentic.py  chunking.py  config.py  docker-compose.yml  git_push.py  justfile  mise.toml  playground.py  playground_bm25_forensic.py  playground_bm25_suppression_finder.py  playground_bm25_threshold_sweep.py  playground_paraphrase_robustness.py  playground_realdb.py  playground_rrf.py  playground_threshold.py  prek.toml  pyproject.toml  query.py  rag_pipeline.py  requirements.txt  scrape_content.py  server.py
.github/workflows/: build-pr.yml  publish.yml
doc/adr/: 0001-hybrid-search-vector-bm25-rrf.md  0002-file-based-lancedb-and-json-bm25.md  0003-chunk-identity-and-markdown-chunking.md  0004-stdlib-config-and-shared-search-engine.md  0005-curated-static-note-catalog-for-ingestion.md  0006-llm-free-deterministic-agent-layer.md  README.md  (+2 more)
learning-records/: 0001-embeddings-as-vector-of-meaning.md  0002-vector-search-at-scale.md  0003-bm25-keyword-search-still-matters.md  0004-rrf-the-tiebreaker.md
lessons/: 0001-embeddings-vector-of-meaning.html  0002-vector-search-at-scale.html  0003-bm25-keyword-search-still-matters.html  0004-rrf-the-tiebreaker.html
reference/: bm25-cheatsheet.html  embeddings-cheatsheet.html  rrf-cheatsheet.html  vector-index-cheatsheet.html
scripts/: build_site.py  css_lint.py
tests/: test_agentic.py  test_bm25_threshold.py  test_build_site.py  test_chunker.py  test_server_agent.py
theme/: style.css
